--- a/pom.xml
+++ b/pom.xml
@@ -24,17 +24,25 @@
   </dependencies>
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <configuration>
-          <archive>
-            <manifest>
-              <mainClass>com.statsystem.App</mainClass>
-            </manifest>
-          </archive>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-</project>
+      <!-- <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-jar-plugin</artifactId>
+         <configuration>
+           <archive>
+             <manifest>
+               <mainClass>com.statsystem.App</mainClass>
+             </manifest>
+           </archive>
+         </configuration>
+       </plugin> -->
+       <plugin>
+             <groupId>com.zenjava</groupId>
+             <artifactId>javafx-maven-plugin</artifactId>
+             <version>2.0</version>
+             <configuration>
+                 <mainClass>com.statsystem.MainApp</mainClass>
+             </configuration>
+       </plugin>
+     </plugins>
+   </build>
+ </project>
