--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.gillius</groupId>
+        <artifactId>jfxutils</artifactId>
+        <version>1.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -36,12 +41,12 @@
          </configuration>
        </plugin> -->
        <plugin>
-             <groupId>com.zenjava</groupId>
-             <artifactId>javafx-maven-plugin</artifactId>
-             <version>2.0</version>
-             <configuration>
-                 <mainClass>com.statsystem.MainApp</mainClass>
-             </configuration>
+           <groupId>com.zenjava</groupId>
+           <artifactId>javafx-maven-plugin</artifactId>
+           <version>2.0</version>
+           <configuration>
+               <mainClass>com.statsystem.MainApp</mainClass>
+           </configuration>
        </plugin>
      </plugins>
    </build>
