--- a/pom.xml
+++ b/pom.xml
@@ -32,20 +32,20 @@
       <version>4.3.1.Final</version>
     </dependency>
     <dependency>
-      <groupId>unknown.binary</groupId>
-      <artifactId>derbyclient</artifactId>
-      <version>SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>unknown.binary</groupId>
-      <artifactId>derby</artifactId>
-      <version>SNAPSHOT</version>
-    </dependency>
-    <dependency>
       <groupId>com.fasterxml</groupId>
       <artifactId>classmate</artifactId>
       <version>1.3.0</version>
       <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>org.gillius</groupId>
+      <artifactId>jfxutils</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.4.187</version>
     </dependency>
   </dependencies>
   <build>
@@ -69,7 +69,15 @@
                <mainClass>com.statsystem.MainApp</mainClass>
            </configuration>
        </plugin>
-     </plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
    </build>
   <repositories>
     <repository>
