--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.statsystem</groupId>
   <artifactId>statsystem</artifactId>
-  <version>0.1</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
 
   <name>statsystem</name>
@@ -63,11 +63,20 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>com.zenjava</groupId>
-        <artifactId>javafx-maven-plugin</artifactId>
-        <version>2.0</version>
+        <artifactId>maven-assembly-plugin</artifactId>
+
         <configuration>
-          <mainClass>com.statsystem.MainApp</mainClass>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+          <outputDirectory>${basedir}</outputDirectory>
+          <finalName>statsystem</finalName>
+          <appendAssemblyId>false</appendAssemblyId>
+          <archive>
+            <manifest>
+              <mainClass>com.statsystem.MainApp</mainClass>
+            </manifest>
+          </archive>
         </configuration>
       </plugin>
       <plugin>
