--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.statsystem</groupId>
   <artifactId>statsystem</artifactId>
-  <version>1.0.1-release</version>
+  <version>1.0.1</version>
   <packaging>jar</packaging>
 
   <name>statsystem</name>
